<resources>
    <string name="app_name">ScrumPocker</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>
    <string name="hide_card">Hide card after selection</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <!--DrawerMenu-->
    <string name="how_to">HOW TO PLAY</string>
    <string name="standard">STANDARD</string>
    <string name="fibonacci">FIBONACCI</string>
    <string name="t_shirt">T-SHIRT</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT QUALTOP</string>
    <string name="feedback">FEEDBACK</string>
    <string name="deck_type">Deck type</string>

</resources>
