<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/deck_type">
        <menu>
            <item
                android:id="@+id/menu_standard"
                android:icon="@android:drawable/ic_dialog_alert"
                android:title="@string/standard" />
            <item
                android:id="@+id/menu_fibonacci"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/fibonacci" />
            <item
                android:id="@+id/menu_tshirt"
                android:icon="@android:drawable/ic_lock_idle_alarm"
                android:title="@string/t_shirt"
                android:visible="true" />

        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about" />
    </group>


</menu>